# bbs-ansi-to-html

./: .gitattributes  .gitignore  LICENSE.md  README.md  ansi-display.css  index.html  style.css
.claude/: CLAUDE.md
.github/workflows/: publish-main.yaml
assets/: index-BlX6sA5S.js  index-CDnVZ7P5.js  index-CL6-07-N.css  index-YmMi6HQN.js
projects/rust/: Cargo.toml  README.md
projects/rust/lib/: Cargo.toml
projects/rust/lib/src/: cp437.rs  lib.rs
projects/rust/web/: Cargo.toml  build.rs
projects/rust/web/src/: config.rs  env.rs  main.rs  server.rs  wwwroot.rs
projects/typescript/: README.md
projects/typescript/lib/: README.md  deno.json  tsconfig.build.json
projects/typescript/lib/src/: colors.ts  converter.ts  converter_test.ts  cp437.ts  global-entry.ts  index.ts
projects/typescript/web/: deno.json  index.html  vite.config.ts
projects/typescript/web/src/: App.tsx  index.css
projects/typescript/web/src/components/: AnsiPreview.tsx
run/: web-rust  web-ts
test-files/: color-test-patterns.utf8.txt  sample-utf8.txt  sample.ans  zO-BreakMyHeart.ans
wwwroot/: ansi-display.css  ansi-display.js
