[package]
name = "ansi-display-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Web application for testing the ansi-to-html-rs library"

[[bin]]
name = "ansi-display-rs"
path = "src/main.rs"

[dependencies]
ansi-to-html-rs = { path = "../lib" }
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
